# cannyls

./: .travis.yml  CONTRIBUTING.md  Cargo.toml  README.md  build.rs
benches/: device.rs  storage.rs
csrc/: devdax.c
grafana/: cannyls-dashboard.json
src/: deadline.rs  error.rs  lib.rs  lump.rs  metrics.rs
src/block/: aligned_bytes.rs  mod.rs
src/device/: builder.rs  command.rs  execution_observer.rs  failure.rs  long_queue_policy.rs  mod.rs  probabilistic.rs  queue.rs  request.rs  thread.rs
src/nvm/: dax.rs  file.rs  memory.rs  mod.rs  shared_memory.rs
src/storage/: address.rs  builder.rs  data_region.rs  header.rs  index.rs  mod.rs  portion.rs
src/storage/allocator/: data_portion_allocator.rs  free_portion.rs  mod.rs
src/storage/journal/: delayed_release_info.rs  header.rs  mod.rs  nvm_buffer.rs  options.rs  record.rs  region.rs  ring_buffer.rs
