[package]
edition = "2018"
name = "cannyls"
version = "0.10.0"
authors = ["The FrugalOS Developers"]
description = "Embedded persistent key-value storage optimized for random-access workload and huge-capacity HDD"
homepage = "https://github.com/frugalos/cannyls"
repository = "https://github.com/frugalos/cannyls"
readme = "README.md"
categories = ["database-implementations"]
license = "MIT"

[badges]
travis-ci = {repository = "frugalos/cannyls"}

[dependencies]
adler32 = "1"
byteorder = { version = "1", features = ["i128"] }
futures = { version = "0.3" }
libc = "0.2"
prometrics = "0.1"
tokio = { version = "1.0", features = ["sync"] }
trackable = "1.2"
uuid = { version = "0.7", features = ["v4"] }
slog = "2"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tempdir = "0.3"
